--- a/package.json
+++ b/package.json
@@ -9,14 +9,21 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.4",
+    "@emotion/styled": "^11.10.4",
     "@mui/icons-material": "^5.10.6",
     "@mui/material": "^5.10.7",
+    "axios": "^0.27.2",
     "classnames": "^2.3.2",
     "formik": "^2.2.9",
     "next": "12.3.1",
     "notistack": "^2.0.5",
     "react": "18.2.0",
+    "react-cookie": "^4.1.1",
     "react-dom": "18.2.0",
+    "react-query": "^3.39.2",
+    "react-slick": "^0.29.0",
+    "slick-carousel": "^1.8.1",
     "yup": "^0.32.11"
   },
   "devDependencies": {
@@ -40,6 +47,7 @@
     "eslint-plugin-react-hooks": "4.6.0",
     "next-compose-plugins": "^2.2.1",
     "prettier": "^2.7.1",
+    "sass": "^1.55.0",
     "typescript": "4.8.4",
     "webp-loader": "^0.6.0"
   }
